# cpp-exercises

./: create-project
_template/: README.md
_template/src/: main.cpp
board-game/: README.md  premake5.lua
board-game/src/: main.cpp
cli/: premake5.lua
cli/src/: main.cpp
crossplatform-libinclude/: CMakeLists.txt
crossplatform-libinclude/Console/: CMakeLists.txt  main.cpp
crossplatform-libinclude/DLL/: CMakeLists.txt  multiply_dll.cpp  multiply_dll.h
crossplatform-libinclude/NestedDLL/: CMakeLists.txt  circle.cpp  circle.h
crossplatform-libinclude/Static/: CMakeLists.txt  multiply_static.cpp  multiply_static.h  pch.h
double-linked-list/: README.md  premake5.lua
double-linked-list/src/: main.cpp
expenses-cli/: README.md  premake5.lua
expenses-cli/src/: main.cpp  prompt.cpp  prompt.h
lib-include/app/: README.md  main.cpp
lib-include/multiply-lib/: README.md  multiply.cpp
library-management/: README.md  premake5.lua
library-management/src/: main.cpp  shelf.cpp  shelf.h
linked-list/: README.md  premake5.lua
linked-list/src/: main.cpp
memory/: README.md  premake5.lua
memory/src/: main.cpp  string.cpp
trees/: README.md  premake5.lua
trees/src/: avl-tree.cpp  binary-tree.cpp  main.cpp
uncategorized/: README.md  premake5.lua
uncategorized/src/: main.cpp  singleton.cpp
vs-libinclude/: lib-dll-linking.sln
vs-libinclude/ConsoleApp/: ConsoleApp.vcxproj  main.cpp
vs-libinclude/NestedDLL/: NestedDLL.vcxproj  NestedDLL.vcxproj.filters  circle.cpp  circle.h
vs-libinclude/static/: multiply_static.cpp  multiply_static.h  (+2 more)
(+62 files in other folders)
